<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.co.odinconsultants.victor</groupId>
    <artifactId>Victor</artifactId>
    <version>0.1</version>
    <name>${project.artifactId}</name>
    <description>Leverages Java's new(ish) APIs to handle vectors and matrices</description>
    <inceptionYear>2023</inceptionYear>
    <url>https://github.com/PhillHenry/Victor</url>
    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/</url>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/PhillHenry/Victor.git</url>
    </scm>
    <developers>
        <developer>
            <name>Phillip Henry</name>
        </developer>
    </developers>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>benchmarking</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <tornado.version>0.15.2</tornado.version>
        <jmh.version>1.37</jmh.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>tornado</groupId>
            <artifactId>tornado-api</artifactId>
            <version>${tornado.version}</version>
        </dependency>
        <dependency>
            <groupId>tornado</groupId>
            <artifactId>tornado-matrices</artifactId>
            <version>${tornado.version}</version>
        </dependency>
        <dependency>
            <groupId>tornado</groupId>
            <artifactId>tornado-runtime</artifactId>
            <version>${tornado.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java21-target</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.11.0</version>
                        <configuration>
                            <source>21</source>
                            <target>21</target>
                            <compilerArgs>
                                <arg>--add-exports=java.base/sun.net.util=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED</arg>
                                <arg>--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
                                <arg>--add-modules=jdk.incubator.vector</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
